# zerobrew

./: CHANGELOG.md  Cargo.toml  install.sh  uninstall.sh
.github/workflows/: homebrew-compat.yml  release.yml
zb_bench/src/: main.rs
zb_cli/: Cargo.toml
zb_cli/src/: cli.rs  init.rs  lib.rs  main.rs
zb_cli/src/commands/: bundle.rs  install.rs  mod.rs  run.rs
zb_core/src/: bottle.rs  errors.rs  formula.rs  lib.rs
zb_io/: Cargo.toml
zb_io/src/: download.rs  install.rs  lib.rs  link.rs  materialize.rs  progress.rs  store.rs
zb_io/src/extraction/patch/: macos.rs
zb_io/src/installer/: install.rs
zb_io/src/network/: api.rs  tap_formula.rs
