[package]
name = "zb_io"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = "1.0"
libc = "0.2"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
fs4 = "0.13"
walkdir = "2"
zb_core = { path = "../zb_core" }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
